# loomux

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-macos-dmg.yml  release.yml
scripts/: build-macos-dmg.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: macos.rs  main.rs  settings.rs  tmux.rs
src/lib/: api.ts  windowDrag.ts
