[package]
name = "tmux-workspace-visualizer"
version = "0.1.1"
description = "Visualize tmux sessions and open them from macOS"
authors = ["Claude Code"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
